fix to double scroll bar

--- a/website-frontend/src/index.css
+++ b/website-frontend/src/index.css
@@ -5,7 +5,7 @@
 
 html {
   scroll-behavior: smooth !important;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
